# kairos

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  api.md  build_pptx.js  kairos-terminal-interface.html  kairos-terminal-interface.pptx  kairos-web-ui.pptx  package-lock.json  package.json  web-ui-deck.js  windows-deployment.md
examples/: 01_basic_query.py  02_custom_tool.py  03_stateful_chat.py  04_with_rag.py  05_custom_middleware.py  06_gateway_server.py  07_fastapi_integration.py  __init__.py
kairos/: __init__.py  batch_runner.py  cli.py  config.py  config_schema.py  hooks.py  logging.py  plugins.py
kairos/agents/: __init__.py  delegate.py  executor.py  factory.py  isolated_loop.py  orchestrator.py  policy.py  types.py
kairos/browser/: __init__.py
kairos/chat/: __init__.py  session.py
kairos/cli/: __init__.py  completions.py  rich_ui.py  skin_engine.py  wizard.py
kairos/core/: __init__.py  loop.py  middleware.py  paths.py  session_backends.py  state.py  stateful_agent.py  thread_state.py  tracing.py
kairos/cron/: __init__.py  scheduler.py
kairos/engines/: __init__.py  protocol.py
kairos/gateway/: __init__.py  __main__.py  auth.py  manager.py  pairing.py  protocol.py  ratelimit.py  server.py  signatures.py  webhook.py
kairos/gateway/adapters/: __init__.py  base.py  discord.py  feishu.py  irc.py  line.py  matrix.py  signal.py  slack.py  telegram.py  wechat.py  whatsapp.py
kairos/infra/evidence/: tracker.py
kairos/infra/knowledge/: schema.py  store.py
kairos/infra/rag/: adapters.py  vector_store.py
kairos/memory/: __init__.py  backends.py  middleware.py  middleware_v2.py  router.py  store.py  tiers.py  vector_backend.py
kairos/middleware/: __init__.py  clarify.py  compress.py  confidence.py  dangling.py  evidence.py  importance_scorer.py  llm_retry.py  logging_mw.py  loop_detection.py  sandbox_audit.py  sandbox_mw.py  security_mw.py  skill_loader.py  subagent_limit.py  thread_data.py  title.py  todo.py  token_usage.py  trajectory_compressor.py  uploads.py  view_image.py
kairos/observability/: __init__.py  error_classifier.py  insights.py  metrics.py  usage_tracker.py
kairos/plugins/: __init__.py  context.py  registry.py
kairos/plugins/builtin/: __init__.py  context_plugin.py  memory_plugin.py  provider_plugin.py
kairos/prompt/: defaults.py  template.py
kairos/providers/: __init__.py  anthropic_adapter.py  base.py  credential.py  failover.py  gemini_adapter.py  registry.py
kairos/sandbox/: __init__.py  providers.py
kairos/security/: __init__.py  content_redact.py  file_safety.py  guardrails.py  path_security.py  permission.py  url_safety.py
kairos/session/: __init__.py  search.py
kairos/skills/: __init__.py  improver.py  manager.py  marketplace.py
kairos/skills/builtin/code-review/: SKILL.md
kairos/skills/builtin/debugging/: SKILL.md
kairos/skills/builtin/github-workflow/: SKILL.md
kairos/skills/builtin/testing/: SKILL.md
kairos/tools/: __init__.py  browser_tools.py  builtin.py  knowledge_lookup.py  mcp_tools.py  rag_search.py  registry.py  skills_tool.py  vision_tools.py
kairos/training/: __init__.py  env.py  recorder.py
kairos/tui/: __init__.py  __main__.py  app.py  theme.py
kairos/tui/styles/: app.tcss
kairos/tui/widgets/: input_bar.py  sidebar.py  transcript.py
kairos/web/: __init__.py  __main__.py
tests/: smoke_test.py  test_agents.py  test_batch_runner.py  test_browser.py  test_circuit_breaker.py  test_cli.py  test_cli_integration.py  test_cli_unit.py  test_config_memory.py  test_config_schema.py  test_context_engine.py  test_core.py  test_credential_pool.py  test_cron.py  test_delegation.py  test_edge_cases.py  test_evidence.py  test_finish_task.py  test_gateway.py  test_gateway_adapters.py  test_gateway_auth.py  test_gateway_health.py  test_gateway_manager_auth.py  test_gateway_reconnect.py  test_grace_call.py  test_hooks.py  test_knowledge.py  test_loop_detection.py  test_memory.py  test_memory_external.py  test_memory_tiers.py  test_metrics.py  test_middleware.py  test_middleware_pipeline.py  test_observability.py  test_parallel_tools.py  test_permission.py  test_plugin_context.py  test_plugins.py  test_prompt.py  (+23 more)
