[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-agent"
version = "0.16.0"
description = "Kairos — The right tool, at the right moment. An AI agent framework."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "buer103", email = "buer103@users.noreply.github.com" }]
keywords = ["ai", "agent", "llm", "rag", "framework", "middleware", "cron", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/buer103/kairos"
Documentation = "https://github.com/buer103/kairos/blob/master/docs/ARCHITECTURE.md"
Repository = "https://github.com/buer103/kairos"
Issues = "https://github.com/buer103/kairos/issues"
Changelog = "https://github.com/buer103/kairos/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# Gateway server (HTTP + SSE)
gateway = ["aiohttp>=3.9.0"]
# Token-accurate compression
compress = ["tiktoken>=0.5.0"]
# RAG / vector search
rag = ["chromadb>=0.4.0"]
# Semantic memory backend (optional)
chroma = ["chromadb>=0.4.0"]
# Dev tools
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.3.0",
]
# Everything
all = [
    "kairos-agent[compress,rag,dev]",
]

[project.scripts]
kairos = "kairos.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kairos*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["smoke_test.py", "test_*.py"]
addopts = ["-q", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long — handled by formatter
